--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -2200,7 +2200,7 @@ paths:
     put:
       summary: PUT receipt headers fuelstation
       tags: 
-        - receipts
+        - fuelstations
       responses:
         '204':
           description: No Content
