fixed body receipts

--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -2221,7 +2221,8 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ReceiptDataUpdate'
+                type: object
+                properties: {}
         '400':
           description: Bad Request
           content:
