--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -1,6 +1,6 @@
 openapi: 3.1.0
 x-stoplight:
-  id: i4z3u87njkxfb
+  id: 4x4b2r57svb45
 info:
   title: Import export Selfnet
   version: 0.2.26
@@ -753,7 +753,7 @@ paths:
                     id: eib9bvuu82uog
                   description: Total number of pages (calculated based on the total number of card elements and size of the page)
       x-stoplight:
-        id: azxb0nuj82fq0
+        id: t1pha541k1r4z
     post:
       summary: Insert/Update cards
       tags:
@@ -773,7 +773,7 @@ paths:
                   id: yn8ni649j87u3
       description: Used to upsert one or more cards.
       x-stoplight:
-        id: 0t561el6b2223
+        id: t3zndqvx56d1x
   /cards/transfer:
     post:
       tags:
@@ -807,7 +807,7 @@ paths:
                 - source_card_pan
                 - target_card_pan
       x-stoplight:
-        id: 0vimiwofq4ekl
+        id: cm7kr0kqalnn5
     parameters: []
   /cards/articles:
     get:
@@ -850,7 +850,7 @@ paths:
           name: supplier_code
           required: true
       x-stoplight:
-        id: 0q1ngzm8v2wae
+        id: 2sjwe953h7awl
     parameters: []
   /customers:
     get:
@@ -929,7 +929,7 @@ paths:
           description: 'Code of the customer, must be unique in the supplier context'
       x-internal: false
       x-stoplight:
-        id: v6dfkq7e5s6kk
+        id: 4itt8qqkojzse
     post:
       summary: Create customer
       tags:
@@ -1038,7 +1038,7 @@ paths:
                       total_recharge: 0
       description: Insert or update customers filtered by supplier code
       x-stoplight:
-        id: 43o1idf90a2bd
+        id: 01zwc2kpbfq5t
   /recharges:
     get:
       summary: Get recharges
@@ -1136,7 +1136,7 @@ paths:
           description: 'Used to choose the filter type. If the value is "INS", the transations will be filtered on the datetime they were saved. Otherwise, if the the value is "TRX", they are filtered on their actual transaction timestamp'
           required: true
       x-stoplight:
-        id: 49vgsuohbfmy1
+        id: 7qq80r446vqvi
     post:
       summary: Request a new recharge
       tags:
@@ -1168,7 +1168,7 @@ paths:
                       amount: 0
       description: Request to recharge a list of cards
       x-stoplight:
-        id: pctccizdlnb17
+        id: 4ikaxprfvhxdw
   /transactions:
     get:
       summary: Get cards transactions
@@ -1382,7 +1382,7 @@ paths:
           required: true
       description: Used to export OIL transactions filtered by input values. The maximum range between date_start and date_end is 7 days.
       x-stoplight:
-        id: lkvcuxm6sliam
+        id: h0rtv4bvh7z0d
   /transactions/nonoil:
     get:
       summary: Get non oil transactions
@@ -1481,7 +1481,7 @@ paths:
           description: Client API key
           required: true
       x-stoplight:
-        id: 94au3ro5b2y2u
+        id: zl12gg6x8987l
   /receipts/transactions:
     get:
       summary: Get receipts transactions
@@ -1534,7 +1534,7 @@ paths:
           description: 'Optional fuel station code, if not set, every transactions of the specified supplier in the datetime range will be returned'
       description: Used to export receipts transactions filtered by input values. The maximum range between date_start and date_end is 7 days.
       x-stoplight:
-        id: gjpfcri5gat4v
+        id: yq128tfzod2dz
   /invoices/active:
     get:
       summary: Get invoices active
@@ -1614,7 +1614,7 @@ paths:
           description: Client API key
           required: true
       x-stoplight:
-        id: c10gtl2fwgffj
+        id: rlb8tve948oq7
   /invoices/passive:
     get:
       summary: Get invoices passive
@@ -1694,7 +1694,7 @@ paths:
           description: Client API key
           required: true
       x-stoplight:
-        id: mdzw724poxgjz
+        id: ot7prfz690jo6
     parameters: []
   /invoices/external:
     get:
@@ -1757,7 +1757,7 @@ paths:
           description: Client API key
           required: true
       x-stoplight:
-        id: 7h572t9gmvfw6
+        id: 0aevgjxptrwxt
     parameters: []
     post:
       summary: Import external invoices
@@ -1801,7 +1801,7 @@ paths:
                 - file
         description: ''
       x-stoplight:
-        id: e39owujs6bww9
+        id: ucuh5tbowwm25
   /invoices/external/status:
     get:
       summary: Get invoices external status
@@ -1839,7 +1839,7 @@ paths:
           name: date_end
           required: true
       x-stoplight:
-        id: 6o0uk5rtmev83
+        id: an9lao4cram19
   /fuelcoupons/transactions:
     get:
       summary: GET Fuelcoupons transactions
@@ -2013,7 +2013,7 @@ paths:
           required: true
       x-internal: false
       x-stoplight:
-        id: wuw1avkpo6z9p
+        id: upxmhcxle9xz5
     parameters: []
   /fuelstations:
     put:
@@ -2033,7 +2033,7 @@ paths:
           description: Internal Server Error
       operationId: put-fuelstations
       x-stoplight:
-        id: ulbmde4wofocp
+        id: 30acdftg2bczg
       requestBody:
         content:
           application/json:
@@ -2129,7 +2129,7 @@ paths:
                   value: []
       operationId: get-fuelstations
       x-stoplight:
-        id: eukohjhb180nm
+        id: s5j0it66yart3
       description: |
         This endpoint allows retrieving a list of fuel stations by providing a supplier code as input.
 
@@ -2202,7 +2202,7 @@ paths:
                 properties: {}
       operationId: get-fuelstations-id-receipt
       x-stoplight:
-        id: n7y4cmt5ul9xz
+        id: w3nqqxkmpz1p3
       parameters:
         - schema:
             type: string
@@ -2210,7 +2210,7 @@ paths:
           name: x-api-key
           required: true
           description: Client API key
-      description: This endpoint allows to retrieve a single fuelstation receipt header through GET mathod using fuelstation Id as path param.
+      description: This endpoint allows to retrieve a single fuelstation receipt header through GET method using fuelstation Id as path param.
     put:
       summary: PUT receipt headers fuelstation
       tags:
@@ -2256,7 +2256,7 @@ paths:
                 properties: {}
       operationId: put-fuelstations-id-receipt
       x-stoplight:
-        id: mcz3e5o88pw39
+        id: 8y7bpm3aj6d8u
       parameters:
         - schema:
             type: string
@@ -2321,13 +2321,73 @@ paths:
         This endpoint allows to activate o deactivate a list of products for single fuel station and supplier code as input.
         The list of the products code can be verified on section ANAGRAFICHE - PRODOTTI of SELFNET portal
       x-stoplight:
-        id: 9lemk77rov5j3
+        id: 4w8ntqq1qvtat
+  /invoices/transactions:
+    get:
+      summary: Get Invoice Transactions
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InvoicesTransactions'
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                type: object
+                properties: {}
+        '422':
+          description: Unprocessable Entity (WebDAV)
+          content:
+            application/json:
+              schema:
+                type: object
+                properties: {}
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties: {}
+      operationId: get-invoices-transactions
+      x-stoplight:
+        id: ptneo62lhhic5
+      description: This endpoint allows to retrieve a list of invoices about transactions through GET method.
+      parameters:
+        - schema:
+            type: string
+          in: query
+          name: supplier_code
+          description: supplier code
+          required: true
+        - schema:
+            type: string
+          in: query
+          name: fuelstation_code
+          description: Is code
+        - schema:
+            type: string
+          in: query
+          name: start_datetime
+          description: unix time
+          required: true
+        - schema:
+            type: string
+          in: query
+          name: end_datetime
+          description: unix time
+          required: true
 components:
   schemas:
     CardInput:
       title: Cards
       x-stoplight:
-        id: 8g6rbol5kkqvg
+        id: 60yr0vverl8ag
       type: object
       properties:
         batch_number:
@@ -2423,7 +2483,7 @@ components:
     Card:
       title: Cards
       x-stoplight:
-        id: qg4ewzim1h31x
+        id: h76tzjrtu3220
       type: object
       properties:
         batch_number:
@@ -2528,7 +2588,7 @@ components:
     CardsArticlesInput:
       title: CardsArticlesInput
       x-stoplight:
-        id: 7kh0j8s0uytmn
+        id: eg9nua04qkb77
       type: object
       properties:
         supplier_code:
@@ -2556,7 +2616,7 @@ components:
     InvoicesExternalResponse:
       title: Invoices external response
       x-stoplight:
-        id: 9ito0i6r3xjqa
+        id: paba2wlecqjsw
       type: object
       description: response external invoice
       examples:
@@ -2683,11 +2743,11 @@ components:
           document_type_code:
             type: string
       x-stoplight:
-        id: frewu31e0zfcg
+        id: 8snj0tdx50r6d
     InvoicesPassiveResponse:
       title: Invoices passive response
       x-stoplight:
-        id: g1pq3qwmxet8a
+        id: bsubbj5mx2yqf
       type: object
       examples:
         - result: OK
@@ -2747,7 +2807,7 @@ components:
     InvoicesActiveResponse:
       title: Invoices active response
       x-stoplight:
-        id: r08i63l6lcom9
+        id: v8tcdntjk76aj
       type: object
       examples:
         - result: OK
@@ -2829,7 +2889,7 @@ components:
     ArticleInput:
       title: ArticleInput
       x-stoplight:
-        id: klnyvlego74pc
+        id: y70fhfow3mcey
       type: object
       properties:
         product_code:
@@ -2846,7 +2906,7 @@ components:
     ReceiptTransaction:
       title: ReceiptTransaction
       x-stoplight:
-        id: qu2f496navqn1
+        id: 40aauzfu4mu3s
       type: object
       properties:
         id:
@@ -3067,7 +3127,7 @@ components:
             type: integer
             description: Amount of the coupon when created
       x-stoplight:
-        id: 1pjhc4o07ws79
+        id: jukrpd11gnc72
     fuelcouponsTransactions:
       type: array
       x-examples:
@@ -3140,11 +3200,11 @@ components:
             type: integer
       description: ''
       x-stoplight:
-        id: nbmzg0wld2bnl
+        id: 65lrcfxbey806
     Recharges:
       title: Recharges
       x-stoplight:
-        id: 0v6kpeq3kseej
+        id: a8yvkfjdgcc5p
       type: object
       properties:
         card_pan:
@@ -3174,11 +3234,11 @@ components:
           items:
             $ref: '#/components/schemas/Recharges'
       x-stoplight:
-        id: 90aalm4vl8um2
+        id: okpx9yzvghyqf
     InputCustomers:
       title: InputCustomers
       x-stoplight:
-        id: mvmxs6xfd524b
+        id: 755yhezr744jq
       type: object
       properties:
         supplier_code:
@@ -3357,7 +3417,7 @@ components:
           total_recharge: 1500
       description: ''
       x-stoplight:
-        id: 198ei3hy7am1t
+        id: 78peuzll094lt
     NonOilTransactionOutput:
       type: object
       x-examples:
@@ -3455,7 +3515,7 @@ components:
         ddt_number:
           type: string
       x-stoplight:
-        id: 5xzm0tjq5xlqz
+        id: dnogy34zwen0s
     RechargesResponse:
       type: object
       x-examples:
@@ -3564,11 +3624,11 @@ components:
             id: c8lt1yl4bs9g5
           description: Commission of recharge
       x-stoplight:
-        id: 29kkl15gvqygq
+        id: xjuxenj9cl8sk
     CardArticles:
       title: CardArticles
       x-stoplight:
-        id: x3g0mz5w7bn2l
+        id: lt4o7bgft6p80
       type: object
       properties:
         product_code:
@@ -3598,7 +3658,7 @@ components:
     FuelstationUpdate:
       title: FuelstationRegistryUpdate
       x-stoplight:
-        id: cy3n361mjt1jx
+        id: 1729rph9sirsw
       type: object
       description: fuelstation registry fields
       required:
@@ -3662,7 +3722,7 @@ components:
     FuelstationParams:
       title: FuelstationParams
       x-stoplight:
-        id: cqf8vsopn8b7b
+        id: oo5a2vvhin8c5
       type: object
       description: input structure to update fuelstation registry
       required:
@@ -3685,7 +3745,7 @@ components:
     FuelstationList:
       title: FuelstationList
       x-stoplight:
-        id: j9jh8k3lv337y
+        id: 1mhoilitorhfd
       type: array
       items:
         $ref: '#/components/schemas/Fuelstation'
@@ -3695,7 +3755,7 @@ components:
     Fuelstation:
       title: Fuelstation
       x-stoplight:
-        id: btz1tmouonhfh
+        id: l5y63t9cqxvju
       type: object
       properties:
         store_id:
@@ -3745,7 +3805,7 @@ components:
             flag: colore test
       description: 'receipt data response '
       x-stoplight:
-        id: s7xocgyt0o2v0
+        id: j4wyq60zdpbgx
     ReceiptDataUpdate:
       type: object
       x-examples:
@@ -3759,7 +3819,7 @@ components:
           username: ICAD
           flag: colore test
       x-stoplight:
-        id: 8vrbai5iuua2g
+        id: qv3gdsg7ttcqq
       properties:
         row1:
           type: string
@@ -3806,7 +3866,117 @@ components:
         - supplier_code
         - fuelstation_code
       x-stoplight:
-        id: kkfq58166fjsb
+        id: e3hcxkqueoc12
+    InvoicesTransactions:
+      type: object
+      properties:
+        invoice_transactions:
+          type: array
+          items:
+            type: object
+            properties:
+              detail_id:
+                type: integer
+              timestamp:
+                type: string
+              insert_timestamp:
+                type: string
+              line_number:
+                type: integer
+              quantity:
+                type: number
+              total_amount:
+                type: integer
+              taxable_amount:
+                type: number
+              vat_amount:
+                type: number
+              unit_price:
+                type: number
+              invoice_number:
+                type: string
+              invoice_year:
+                type: integer
+              invoice_issuing_date:
+                type: string
+              invoice_amount:
+                type: integer
+              invoice_selfnet:
+                type: boolean
+              invoice_immediate:
+                type: boolean
+              customer_name:
+                type: string
+              customer_vat:
+                type: string
+              customer_fiscalcode:
+                type: string
+              customer_address:
+                type: string
+              customer_city:
+                type: string
+              customer_cap:
+                type: string
+              customer_province:
+                type: string
+              document_type:
+                type: string
+              product_name:
+                type: string
+              fuelStation_id:
+                type: integer
+              fuelStation_code:
+                type: string
+              fuelStation_name:
+                type: string
+              payment_method:
+                type: string
+              supplier_id:
+                type: integer
+              invoice_status:
+                type: string
+              unit_measure:
+                type: string
+              isoil:
+                type: boolean
+              uf_id:
+                type: integer
+      x-examples:
+        Example 1:
+          invoice_transactions:
+            - detail_id: 12458290
+              timestamp: '2024-08-05T17:53:00.897+02:00'
+              insert_timestamp: '2024-08-05T17:54:10.87+02:00'
+              line_number: 1
+              quantity: 5.4200542
+              total_amount: 10
+              taxable_amount: 8.2
+              vat_amount: 1.8
+              unit_price: 1.85
+              invoice_number: PA.Imm-24002
+              invoice_year: 2024
+              invoice_issuing_date: '2024-08-05T00:00:00+02:00'
+              invoice_amount: 10
+              invoice_selfnet: false
+              invoice_immediate: true
+              customer_name: Cliente di Prova IS
+              customer_vat: '09111111112'
+              customer_fiscalcode: CTZNDR68B10L219R
+              customer_address: 'Via Vittorio Amedeo II, n°3'
+              customer_city: VOLVERA
+              customer_cap: '10040'
+              customer_province: TO
+              document_type: Fattura
+              product_name: VERDE
+              fuelStation_id: 12
+              fuelStation_code: IS316002
+              fuelStation_name: PV TEST 1
+              payment_method: Carta di pagamento
+              supplier_id: 6
+              invoice_status: Consegnata
+              unit_measure: Lt
+              isoil: true
+              uf_id: 12
   securitySchemes:
     Cognito:
       type: oauth2
